# Can_Polars_save_Polars

./: .gitignore  README.md  download_data.sh  pyproject.toml  requirements.txt
experiments/: data.py  libraries.py  load_dataset.py  plotls.ipynb  scaling.py
experiments/results/: cudf.csv  pandas.csv  polars.csv
