[tool.poetry]
name = "can-polars-save-polars"
version = "0.1.0"
description = ""
authors = ["Korbinian Pfab <korbinian.pfab@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
polars = "^0.20.10"
fastparquet = "^2024.2.0"
openml = "^0.14.2"
carbontracker = "^1.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
