[tool.poetry]
name = "can-polars-save-polars"
version = "0.1.0"
description = ""
authors = ["Korbinian Pfab <korbinian.pfab@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.10"
fastparquet = "^2024.2.0"
carbontracker = "^1.2.5"
ipykernel = "^6.29.3"
plotly = "^5.19.0"
nbformat = "^5.9.2"
kaleido = "0.2.1"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
